# taiwan-roadsafety-reputation

./: .gitignore  README.md  index.html  main.css  package.json  vite-manifest.json
.github/workflows/: deploy-to-gh-pages.yml
_app/: version.json
_app/immutable/: start-1cffb8c4.js  start-3083e7d4.js
_app/immutable/chunks/: 2-c15e1013.js  2-c4d1bc63.js
_app/immutable/components/pages/: _page.svelte-1740acc2.js  _page.svelte-456ddfbc.js
data/: countries.geo.json  death_rate.csv  original_countries.geo.json  reputation.csv  reputation.xlsx
python/: pyproject.toml
python/python/: 1_clean_geojson.py  2_clean_death_rate.py  3_copy_to_lib_assets.py  __main__.py
src/: app.html
src/lib/assets/: reputation.json
src/routes/: +page.svelte
static/: main.css
