[tool.poetry]
name = "python"
version = "0.1.0"
description = ""
authors = ["FOBshippingpoint <aulaulql4ql4xj6@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.2"
openpyxl = "^3.0.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
